--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "@jokio/datastore",
-	"version": "0.1.3",
+	"version": "0.2.0",
 	"description": "Helper library for Google Cloud Datastore",
 	"main": "dist/index.js",
 	"types": "dist/index.d.js",
 	"scripts": {
-		"start-simple": "ts-node examples/simple",
+		"start-ddd": "ts-node src/examples/ddd",
 		"test": "echo 'Everything is awesome!'",
 		"dev": "nodemon"
 	},
