--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"dev": "nodemon"
 	},
 	"dependencies": {
-		"@google-cloud/datastore": "1.3.2"
+		"@google-cloud/datastore": "1.3.2",
+		"ts-events": "^3.2.0"
 	},
 	"devDependencies": {
 		"@types/google-cloud__datastore": "1.1.1",
