--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@jokio/datastore",
-	"version": "0.2.2",
+	"version": "0.2.3",
 	"description": "Helper library for Google Cloud Datastore",
 	"main": "dist/index.js",
 	"types": "dist/index.d.js",
@@ -12,7 +12,7 @@
 	},
 	"dependencies": {
 		"@google-cloud/datastore": "1.3.2",
-		"ts-events": "^3.2.0"
+		"@jokio/ts-events": "3.2.3"
 	},
 	"devDependencies": {
 		"@types/google-cloud__datastore": "1.1.1",
