--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@jokio/datastore",
-	"version": "0.2.6",
+	"version": "0.3.0",
 	"description": "Helper library for Google Cloud Datastore",
 	"main": "dist/index.js",
 	"types": "dist/index.d.js",
@@ -11,8 +11,7 @@
 		"dev": "nodemon"
 	},
 	"dependencies": {
-		"@google-cloud/datastore": "1.3.2",
-		"@jokio/ts-events": "3.2.6"
+		"@google-cloud/datastore": "1.3.2"
 	},
 	"devDependencies": {
 		"@types/google-cloud__datastore": "1.1.1",
