--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@jokio/datastore",
-	"version": "0.4.2",
+	"version": "0.4.3",
 	"description": "Helper library for Google Cloud Datastore",
 	"main": "dist/index.js",
 	"types": "dist/index.d.js",
@@ -8,7 +8,8 @@
 		"start-simple": "ts-node src/examples/simple",
 		"start-ddd": "ts-node src/examples/ddd",
 		"test": "echo 'Everything is awesome!'",
-		"dev": "nodemon"
+		"dev": "nodemon",
+		"deploy": "tsc && npm publish"
 	},
 	"dependencies": {
 		"@google-cloud/datastore": "1.3.2"
