--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"deploy": "tsc && npm publish"
 	},
 	"dependencies": {
-		"@google-cloud/datastore": "1.3.2"
+		"@google-cloud/datastore": "1.3.2",
+		"uuid": "^3.1.0"
 	},
 	"devDependencies": {
 		"@types/google-cloud__datastore": "1.1.1",
