--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
 	},
 	"dependencies": {
 		"@google-cloud/datastore": "1.3.2",
+		"recompose": "^0.26.0",
 		"uuid": "^3.1.0"
 	},
 	"devDependencies": {
 		"@types/google-cloud__datastore": "1.1.1",
+		"@types/recompose": "^0.24.4",
 		"nodemon": "1.12.4",
 		"ts-node": "4.0.1",
 		"typescript": "2.6.2"
